--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,17 @@
-# // TODO: Implementar el docker-compose
+services:
+  libreria-api:
+    build: .
+    container_name: libreria-api
+    ports:
+      - "8080:8080"
+    volumes:
+      - h2_data:/data
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:h2:file:/data/libreria_db
+      SPRING_DATASOURCE_USERNAME: sa
+      SPRING_DATASOURCE_PASSWORD: ""
+      SPRING_H2_CONSOLE_ENABLED: "true"
+    restart: unless-stopped
+
+volumes:
+  h2_data:
