--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,27 @@
-HELP.md
+!.mvn/
+!mvnw
+!mvnw.cmd
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
-
-### STS ###
+*.mv.db
+*.trace.db
+/data/
 .apt_generated
 .classpath
 .factorypath
 .project
-.settings
+.settings/
 .springBeans
 .sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
+.idea/
 *.iml
 *.ipr
-
-### NetBeans ###
+*.iws
 /nbproject/private/
 /nbbuild/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
-
-### VS Code ###
+/build/
 .vscode/
+*.log
+logs/
